Retrieves book reviews and add books review to db, displays on html, test to make sure visibility feature works for review, finish edit.php for book, added SQL database to structure

--- a/resources/index.css
+++ b/resources/index.css
@@ -39,6 +39,10 @@
     background-color: #82929F;
 }
 
+.BookReview p{
+  font-size: 5rem;
+}
+
 .container {
     margin: 1% 5%;
     background-color: #82929F;
